--- a/MLUtils/pyproject.toml
+++ b/MLUtils/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "jmacey", email = "jmacey@bournemouth.ac.uk" }
 ]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "requests>=2.32.5",
+]
 
 [project.scripts]
 mlutils = "mlutils:main"
